src/objects/OfferMembership__c.object
<CustomObject>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Offer Memberships</relationshipLabel>
        <relationshipName>Offer_Memberships</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <label>Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MembershipCodeFormula__c</fullName>
        <description>Formula that will generate the Membership Code, upon create of the membership record, this will get stored into the Membership Code field so that it stays unchanged with the record over time.</description>
        <formula>UPPER(OfferVersion__r.OfferVersionCode__c &amp; &apos;-&apos; &amp; RIGHT(Contact__c, 3) &amp; RIGHT(Id, 3))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Formula that will generate the Membership Code, then will copy to the Membership Code field.</inlineHelpText>
        <label>Membership Code Formula</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MembershipCode__c</fullName>
        <description>Membership Code unique to this Offer Version and Contact. This will not change once membership record is created.  Set via formula field and workflow.  This value can manually be overwritten as needed.</description>
        <inlineHelpText>Membership Code unique to this Offer Version and Contact. This will not change once membership record is created.</inlineHelpText>
        <label>Membership Code</label>
        <length>16</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OfferVersion__c</fullName>
        <label>Offer Version</label>
        <referenceTo>OfferVersion__c</referenceTo>
        <relationshipLabel>Offer Memberships</relationshipLabel>
        <relationshipName>Offer_Memberships</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Offer__c</fullName>
        <label>Offer</label>
        <referenceTo>Offer__c</referenceTo>
        <relationshipLabel>Offer Memberships</relationshipLabel>
        <relationshipName>Offer_Memberships</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>SourceCode__c</fullName>
        <formula>Offer__r.SourceCode__r.Name</formula>
        <label>Source Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <formula>IF(OfferVersion__r.Active__c == true, &apos;Active&apos;, &apos;Inactive&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>UsedDate__c</fullName>
        <description>Date when offer code got validated successfully by the community validation component</description>
        <label>Used Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>UsedMode__c</fullName>
        <description>URL - If code was validated directly via URL OnClick 
Manual - If code was not validated by URL OnClick</description>
        <label>Used Mode</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>URL</fullName>
                </value>
                <value>
                    <fullName>Manual</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Used__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Used</label>
        <type>Checkbox</type>
    </fields>
    <label>Offer Membership</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Offer Code</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Offer Memberships</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>Used_Fields_Required</fullName>
        <active>false</active>
        <description>All Used fields need to be populated together.</description>
        <errorConditionFormula>(Used__c &amp;&amp; (ISBLANK(UsedDate__c) || ISBLANK(TEXT(UsedMode__c))))
||
(NOT(ISBLANK(UsedDate__c)) &amp;&amp; (NOT(Used__c) || ISBLANK(TEXT(UsedMode__c))))
||
(NOT(ISBLANK(TEXT(UsedMode__c))) &amp;&amp; (NOT(Used__c) || ISBLANK(UsedDate__c)))</errorConditionFormula>
        <errorMessage>Please fill in Used, Used Date and Used Mode together, they are all required if one is filled in.</errorMessage>
    </validationRules>
</CustomObject>